--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@ html, body {
   overflow: auto;
 }
 .container {
-  width: 100%; min-height: 100vh;
-  background: #fff;
-  box-sizing: border-box;
-  padding: 20px;
-  display: flex; flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  display: flex; 
+  flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  box-sizing: border-box;
+  background: #fff;
 }
 h1 {
   margin: 0 0 12px 0;
   color: #b91c57;
-  font-size: 32px;
+  font-size: 36px;
   text-align: center;
 }
 .sub {
@@ -42,7 +45,7 @@ h1 {
 input[type="text"], input[type="password"], input[type="number"] {
   width: 100%;
   padding: 16px;
-  font-size: 20px;
+  font-size: 22px;
   border: 2px solid #eee;
   border-radius: 10px;
   text-align: center;
@@ -51,7 +54,7 @@ input[type="text"], input[type="password"], input[type="number"] {
 button {
   width: 100%;
   padding: 16px;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 700;
   color: white;
   border: none;
