--- a/index.html
+++ b/index.html
@@ -1,203 +1,210 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="utf-8" />
-<title>Login & Gửi Item & Add Coin</title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<style>
-html, body {
-  height: 100%; margin: 0; padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f6f0f6;
-  overflow: auto;
-}
-.container {
-  min-height: 100vh;
-  width: 100%;
-  display: flex; 
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 20px;
-  box-sizing: border-box;
-  background: #fff;
-}
-h1 {
-  margin: 0 0 12px 0;
-  color: #b91c57;
-  font-size: 36px;
-  text-align: center;
-}
-.sub {
-  color: #666;
-  margin-bottom: 20px;
-  text-align: center;
-  font-size: 18px;
-}
-.row {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  margin-bottom: 16px;
-}
-input[type="text"], input[type="password"], input[type="number"] {
-  width: 100%;
-  padding: 16px;
-  font-size: 22px;
-  border: 2px solid #eee;
-  border-radius: 10px;
-  text-align: center;
-  box-sizing: border-box;
-}
-button {
-  width: 100%;
-  padding: 16px;
-  font-size: 22px;
-  font-weight: 700;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  background: #c2185b;
-}
-button.secondary {
-  background: #555;
-}
-hr {
-  width: 90%;
-  border: none;
-  border-top: 1px solid #eee;
-  margin: 18px 0;
-}
-small.note {
-  color: #888;
-  display: block;
-  text-align: center;
-  margin-top: 8px;
-}
-</style>
+  <meta charset="utf-8" />
+  <title>Login & Gửi Item & Add Coin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f6f0f6;
+      overflow: auto;
+    }
+    .container {
+      min-height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 20px;
+      box-sizing: border-box;
+      background: #fff;
+    }
+    h1 {
+      margin: 0 0 12px 0;
+      color: #b91c57;
+      font-size: 36px;
+      text-align: center;
+    }
+    .sub {
+      color: #666;
+      margin-bottom: 20px;
+      text-align: center;
+      font-size: 18px;
+    }
+    .row {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 16px;
+    }
+    input[type="text"], input[type="password"], input[type="number"] {
+      width: 100%;
+      padding: 16px;
+      font-size: 22px;
+      border: 2px solid #eee;
+      border-radius: 10px;
+      text-align: center;
+      box-sizing: border-box;
+    }
+    button {
+      width: 100%;
+      padding: 16px;
+      font-size: 22px;
+      font-weight: 700;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      background: #c2185b;
+    }
+    button.secondary {
+      background: #555;
+    }
+    hr {
+      width: 90%;
+      border: none;
+      border-top: 1px solid #eee;
+      margin: 18px 0;
+    }
+    small.note {
+      color: #888;
+      display: block;
+      text-align: center;
+      margin-top: 8px;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-<h1>Login & Gửi Item & Add Coin</h1>
-<div class="sub">Nhập tài khoản, password, ID ITEM hoặc số coin để gửi. Mọi dữ liệu sẽ không được lưu.</div>
+  <div class="container">
+    <h1>Login & Gửi Item & Add Coin</h1>
+    <div class="sub">Nhập tài khoản, password, ID ITEM hoặc số coin để gửi. Mọi dữ liệu sẽ không được lưu.</div>
 
-<!-- LOGIN -->
-<div class="row">
-<input type="text" id="username" placeholder="Username">
-<input type="password" id="password" placeholder="Password">
-<button onclick="loginAndSend()">🔑 Login & Gửi</button>
-</div>
+    <!-- LOGIN -->
+    <div class="row">
+      <input type="text" id="username" placeholder="Username">
+      <input type="password" id="password" placeholder="Password">
+      <button onclick="loginAndSend()">🔑 Login & Gửi</button>
+    </div>
 
-<hr>
+    <hr>
 
-<!-- GỬI ITEM -->
-<div class="row">
-<input type="text" id="reward" placeholder="Nhập ID ITEM">
-<input type="number" id="quantity" placeholder="Số lượng" min="1">
-<button onclick="sendItem()">🚀 Gửi Item</button>
-</div>
+    <!-- GỬI ITEM -->
+    <div class="row">
+      <input type="text" id="reward" placeholder="Nhập ID ITEM">
+      <input type="number" id="quantity" placeholder="Số lượng" min="1">
+      <button onclick="sendItem()">🚀 Gửi Item</button>
+    </div>
 
-<hr>
+    <hr>
 
-<!-- ADD COIN -->
-<div class="row">
-<input type="number" id="coinAmount" placeholder="Số lượng coin" min="1">
-<button onclick="addCoin()">➕ ADD COIN</button>
-</div>
-</div>
+    <!-- ADD COIN -->
+    <div class="row">
+      <input type="number" id="coinAmount" placeholder="Số lượng coin" min="1">
+      <button onclick="addCoin()">➕ ADD COIN</button>
+    </div>
+  </div>
 
-<script>
-const VERCEL_BASE = "https://<YOUR_PROJECT>.vercel.app"; // thay bằng URL deploy Vercel
-const LOGIN_API = VERCEL_BASE + "/api/login";
-const SEND_API  = VERCEL_BASE + "/api/proxy";
+  <script>
+    const VERCEL_BASE = "https://bug-blush.vercel.app"; // URL của trang web của bạn
+    const LOGIN_API = VERCEL_BASE + "/api/login";
+    const SEND_API  = VERCEL_BASE + "/api/proxy";
 
-async function loginAndSend(){
-  const username=document.getElementById('username').value.trim();
-  const password=document.getElementById('password').value.trim();
-  if(!username||!password){
-    Swal.fire('Thiếu dữ liệu','Điền đầy đủ username và password','warning'); return;
-  }
-  try{
-    const res = await fetch(LOGIN_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body: JSON.stringify({username,password})
-    });
-    const data = await res.json();
-    if(data.ok && data.cookie){
-      Swal.fire('Login thành công','Cookie nhận từ server thật','success');
-    } else {
-      Swal.fire('Login thất bại','Server trả: '+JSON.stringify(data),'error');
+    async function loginAndSend() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      if (!username || !password) {
+        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username và password', 'warning');
+        return;
+      }
+      try {
+        const res = await fetch(LOGIN_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password })
+        });
+        const data = await res.json();
+        if (data.ok && data.cookie) {
+          Swal.fire('Login thành công', 'Cookie nhận từ server thật', 'success');
+        } else {
+          Swal.fire('Login thất bại', 'Server trả: ' + JSON.stringify(data), 'error');
+        }
+      } catch (err) {
+        Swal.fire('Lỗi kết nối', 'Không thể gọi API login: ' + err.message, 'error');
+        console.error(err);
+      }
     }
-  }catch(err){
-    Swal.fire('Lỗi kết nối','Không thể gọi API login: '+err.message,'error');
-    console.error(err);
-  }
-}
 
-async function sendItem(){
-  const username=document.getElementById('username').value.trim();
-  const password=document.getElementById('password').value.trim();
-  const reward=document.getElementById('reward').value.trim();
-  const quantity=document.getElementById('quantity').value.trim();
-  if(!username||!password||!reward||!quantity){
-    Swal.fire('Thiếu dữ liệu','Điền đầy đủ username/password/reward/quantity','warning'); return;
-  }
-  try{
-    const loginRes=await fetch(LOGIN_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({username,password})
-    });
-    const loginData=await loginRes.json();
-    if(!loginData.ok || !loginData.cookie){
-      Swal.fire('Login thất bại','Không thể lấy cookie để gửi item','error'); return;
+    async function sendItem() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const reward = document.getElementById('reward').value.trim();
+      const quantity = document.getElementById('quantity').value.trim();
+      if (!username || !password || !reward || !quantity) {
+        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username/password/reward/quantity', 'warning');
+        return;
+      }
+      try {
+        const loginRes = await fetch(LOGIN_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password })
+        });
+        const loginData = await loginRes.json();
+        if (!loginData.ok || !loginData.cookie) {
+          Swal.fire('Login thất bại', 'Không thể lấy cookie để gửi item', 'error');
+          return;
+        }
+        const cookie = loginData.cookie;
+        await fetch(SEND_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ cookie, reward, quantity })
+        });
+        Swal.fire('Thành công', 'Đã gửi item. Trang sẽ reload', 'success').then(() => location.reload());
+      } catch (err) {
+        Swal.fire('Lỗi', 'Gửi item thất bại: ' + err.message, 'error');
+        console.error(err);
+      }
     }
-    const cookie=loginData.cookie;
-    await fetch(SEND_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({cookie,reward,quantity})
-    });
-    Swal.fire('Thành công','Đã gửi item. Trang sẽ reload','success').then(()=>location.reload());
-  }catch(err){
-    Swal.fire('Lỗi','Gửi item thất bại: '+err.message,'error');
-    console.error(err);
-  }
-}
 
-async function addCoin(){
-  const username=document.getElementById('username').value.trim();
-  const password=document.getElementById('password').value.trim();
-  const amount=document.getElementById('coinAmount').value.trim();
-  if(!username||!password||!amount){
-    Swal.fire('Thiếu dữ liệu','Điền đầy đủ username/password/amount','warning'); return;
-  }
-  try{
-    const loginRes=await fetch(LOGIN_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({username,password})
-    });
-    const loginData=await loginRes.json();
-    if(!loginData.ok || !loginData.cookie){
-      Swal.fire('Login thất bại','Không thể lấy cookie để add coin','error'); return;
+    async function addCoin() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const amount = document.getElementById('coinAmount').value.trim();
+      if (!username || !password || !amount) {
+        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username/password/amount', 'warning');
+        return;
+      }
+      try {
+        const loginRes = await fetch(LOGIN_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password })
+        });
+        const loginData = await loginRes.json();
+        if (!loginData.ok || !loginData.cookie) {
+          Swal.fire('Login thất bại', 'Không thể lấy cookie để add coin', 'error');
+          return;
+        }
+        const cookie = loginData.cookie;
+        await fetch(SEND_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ cookie, params: { type: "Tanthu", amount } })
+        });
+        Swal.fire('Thành công', 'Đã gửi coin. Trang sẽ reload', 'success').then(() => location.reload());
+      } catch (err) {
+        Swal.fire('Lỗi', 'Add coin thất bại: ' + err.message, 'error');
+        console.error(err);
+      }
     }
-    const cookie=loginData.cookie;
-    await fetch(SEND_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({cookie,params:{type:"Tanthu", amount}})
-    });
-    Swal.fire('Thành công','Đã gửi coin. Trang sẽ reload','success').then(()=>location.reload());
-  }catch(err){
-    Swal.fire('Lỗi','Add coin thất bại: '+err.message,'error');
-    console.error(err);
-  }
-}
-</script>
+  </script>
 </body>
 </html>
