--- a/index.html
+++ b/index.html
@@ -1,210 +1,101 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <title>Login & Gửi Item & Add Coin</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #f6f0f6;
-      overflow: auto;
-    }
-    .container {
-      min-height: 100vh;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 20px;
-      box-sizing: border-box;
-      background: #fff;
-    }
-    h1 {
-      margin: 0 0 12px 0;
-      color: #b91c57;
-      font-size: 36px;
-      text-align: center;
-    }
-    .sub {
-      color: #666;
-      margin-bottom: 20px;
-      text-align: center;
-      font-size: 18px;
-    }
-    .row {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      margin-bottom: 16px;
-    }
-    input[type="text"], input[type="password"], input[type="number"] {
-      width: 100%;
-      padding: 16px;
-      font-size: 22px;
-      border: 2px solid #eee;
-      border-radius: 10px;
-      text-align: center;
-      box-sizing: border-box;
-    }
-    button {
-      width: 100%;
-      padding: 16px;
-      font-size: 22px;
-      font-weight: 700;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      background: #c2185b;
-    }
-    button.secondary {
-      background: #555;
-    }
-    hr {
-      width: 90%;
-      border: none;
-      border-top: 1px solid #eee;
-      margin: 18px 0;
-    }
-    small.note {
-      color: #888;
-      display: block;
-      text-align: center;
-      margin-top: 8px;
-    }
-  </style>
+<meta charset="utf-8" />
+<title>Login & Gửi Item & Add Coin</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<style>
+html, body { height:100%; margin:0; font-family:Arial; background:#f6f0f6; overflow:auto; }
+.container { max-width:700px; margin:20px auto; padding:20px; background:#fff; border-radius:14px; box-shadow:0 8px 30px rgba(0,0,0,0.12); display:flex; flex-direction:column; gap:16px; }
+h1 { text-align:center; color:#b91c57; }
+input, button { width:100%; padding:16px; font-size:18px; margin-bottom:8px; border-radius:10px; border:2px solid #eee; text-align:center; }
+button { background:#c2185b; color:white; border:none; cursor:pointer; font-weight:700; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Login & Gửi Item & Add Coin</h1>
-    <div class="sub">Nhập tài khoản, password, ID ITEM hoặc số coin để gửi. Mọi dữ liệu sẽ không được lưu.</div>
+<div class="container">
+<h1>Login & Gửi Item & Add Coin</h1>
 
-    <!-- LOGIN -->
-    <div class="row">
-      <input type="text" id="username" placeholder="Username">
-      <input type="password" id="password" placeholder="Password">
-      <button onclick="loginAndSend()">🔑 Login & Gửi</button>
-    </div>
+<input type="text" id="username" placeholder="Username">
+<input type="password" id="password" placeholder="Password">
+<button onclick="login()">🔑 Login</button>
 
-    <hr>
+<hr>
 
-    <!-- GỬI ITEM -->
-    <div class="row">
-      <input type="text" id="reward" placeholder="Nhập ID ITEM">
-      <input type="number" id="quantity" placeholder="Số lượng" min="1">
-      <button onclick="sendItem()">🚀 Gửi Item</button>
-    </div>
+<input type="text" id="reward" placeholder="Nhập ID ITEM">
+<input type="number" id="quantity" placeholder="Số lượng" min="1">
+<button onclick="sendItem()">🚀 Gửi Item</button>
 
-    <hr>
+<hr>
 
-    <!-- ADD COIN -->
-    <div class="row">
-      <input type="number" id="coinAmount" placeholder="Số lượng coin" min="1">
-      <button onclick="addCoin()">➕ ADD COIN</button>
-    </div>
-  </div>
+<input type="number" id="coinAmount" placeholder="Số lượng coin" min="1">
+<button onclick="addCoin()">➕ ADD COIN</button>
+</div>
 
-  <script>
-    const VERCEL_BASE = "https://bug-blush.vercel.app"; // URL của trang web của bạn
-    const LOGIN_API = VERCEL_BASE + "/api/login";
-    const SEND_API  = VERCEL_BASE + "/api/proxy";
+<script>
+const VERCEL_BASE = "https://bug-blush.vercel.app";
 
-    async function loginAndSend() {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-      if (!username || !password) {
-        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username và password', 'warning');
-        return;
-      }
-      try {
-        const res = await fetch(LOGIN_API, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username, password })
-        });
-        const data = await res.json();
-        if (data.ok && data.cookie) {
-          Swal.fire('Login thành công', 'Cookie nhận từ server thật', 'success');
-        } else {
-          Swal.fire('Login thất bại', 'Server trả: ' + JSON.stringify(data), 'error');
-        }
-      } catch (err) {
-        Swal.fire('Lỗi kết nối', 'Không thể gọi API login: ' + err.message, 'error');
-        console.error(err);
-      }
-    }
+async function login() {
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value.trim();
+  if(!username||!password){Swal.fire('Thiếu dữ liệu','Điền đầy đủ username và password','warning'); return;}
+  try{
+    const res = await fetch(VERCEL_BASE+'/api/login',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({username,password})
+    });
+    const data = await res.json();
+    if(data.ok) Swal.fire('Login thành công','Bạn đã đăng nhập thực sự','success');
+    else Swal.fire('Login thất bại',data.message,'error');
+  }catch(err){Swal.fire('Lỗi',err.message,'error');}
+}
 
-    async function sendItem() {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const reward = document.getElementById('reward').value.trim();
-      const quantity = document.getElementById('quantity').value.trim();
-      if (!username || !password || !reward || !quantity) {
-        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username/password/reward/quantity', 'warning');
-        return;
-      }
-      try {
-        const loginRes = await fetch(LOGIN_API, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username, password })
-        });
-        const loginData = await loginRes.json();
-        if (!loginData.ok || !loginData.cookie) {
-          Swal.fire('Login thất bại', 'Không thể lấy cookie để gửi item', 'error');
-          return;
-        }
-        const cookie = loginData.cookie;
-        await fetch(SEND_API, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ cookie, reward, quantity })
-        });
-        Swal.fire('Thành công', 'Đã gửi item. Trang sẽ reload', 'success').then(() => location.reload());
-      } catch (err) {
-        Swal.fire('Lỗi', 'Gửi item thất bại: ' + err.message, 'error');
-        console.error(err);
-      }
-    }
+async function sendItem(){
+  const username=document.getElementById('username').value.trim();
+  const password=document.getElementById('password').value.trim();
+  const reward=document.getElementById('reward').value.trim();
+  const quantity=document.getElementById('quantity').value.trim();
+  if(!username||!password||!reward||!quantity){Swal.fire('Thiếu dữ liệu','Điền đầy đủ','warning'); return;}
+  try{
+    const loginRes=await fetch(VERCEL_BASE+'/api/login',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({username,password})
+    });
+    const loginData=await loginRes.json();
+    if(!loginData.ok){Swal.fire('Login thất bại','Không lấy được cookie','error'); return;}
+    await fetch(VERCEL_BASE+'/api/proxy',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({cookie:loginData.cookie,reward,quantity})
+    });
+    Swal.fire('Thành công','Đã gửi item. Reload trang','success').then(()=>location.reload());
+  }catch(err){Swal.fire('Lỗi',err.message,'error');}
+}
 
-    async function addCoin() {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const amount = document.getElementById('coinAmount').value.trim();
-      if (!username || !password || !amount) {
-        Swal.fire('Thiếu dữ liệu', 'Điền đầy đủ username/password/amount', 'warning');
-        return;
-      }
-      try {
-        const loginRes = await fetch(LOGIN_API, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username, password })
-        });
-        const loginData = await loginRes.json();
-        if (!loginData.ok || !loginData.cookie) {
-          Swal.fire('Login thất bại', 'Không thể lấy cookie để add coin', 'error');
-          return;
-        }
-        const cookie = loginData.cookie;
-        await fetch(SEND_API, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ cookie, params: { type: "Tanthu", amount } })
-        });
-        Swal.fire('Thành công', 'Đã gửi coin. Trang sẽ reload', 'success').then(() => location.reload());
-      } catch (err) {
-        Swal.fire('Lỗi', 'Add coin thất bại: ' + err.message, 'error');
-        console.error(err);
-      }
-    }
-  </script>
+async function addCoin(){
+  const username=document.getElementById('username').value.trim();
+  const password=document.getElementById('password').value.trim();
+  const amount=document.getElementById('coinAmount').value.trim();
+  if(!username||!password||!amount){Swal.fire('Thiếu dữ liệu','Điền đầy đủ','warning'); return;}
+  try{
+    const loginRes=await fetch(VERCEL_BASE+'/api/login',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({username,password})
+    });
+    const loginData=await loginRes.json();
+    if(!loginData.ok){Swal.fire('Login thất bại','Không lấy được cookie','error'); return;}
+    await fetch(VERCEL_BASE+'/api/proxy',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({cookie:loginData.cookie,params:{type:"Tanthu",amount}})
+    });
+    Swal.fire('Thành công','Đã add coin. Reload trang','success').then(()=>location.reload());
+  }catch(err){Swal.fire('Lỗi',err.message,'error');}
+}
+</script>
 </body>
 </html>
